--- a/templates/index.html
+++ b/templates/index.html
@@ -3,44 +3,62 @@
   <head>
     <meta charset="utf-8">
     <title>Health maintainance</title>
-    <!-- Bootstrap用CSSの読み込み -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- Bootstrap用JavaScriptの読み込み -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" href="../static/style.css"> -->
+    <link rel="stylesheet" href="{{url_for('static',filename = 'style.css')}}">
   </head>
   <body>
     <div class="header">
+      <img src="/static/images/SCFM.png" class="aligncenter">
+      <p class="thema">Recommended Health Maintainance for Our Patients</p>
     </div>
     <div class="main">
-      <p>患者のプロファイルを入力してください。</p>
+      <p class="thema2">患者のプロファイルを入力してください。</p>
       <form action="/result" method="POST">
-         <p>年齢を入力してください(半角数字)<input type = "text" name="age"></p>
-         <p>性別を入力してください</p>
-         <input type="radio" name="gender" value="m">男性
-         <input type="radio" name="gender" value="f">女性
-         <p>(女性の場合)現在妊娠していますか？</p>
-         <input type="radio" name="pregnancy" value="1">はい
-         <input type="radio" name="pregnancy" value="2">いいえ
-         <p>タバコを吸っていますか？</p>
-         <input type="radio" name="smoking" value="1">はい
-         <input type="radio" name="smoking" value="2">いいえ
-         <input type="radio" name="smoking" value="3">昔吸っていたけど今はやめた
-         <p>1日何本吸っています(した)か？(半角数字)<input type ="text" name="number_of_smoking"></p>
-         <p>何年間吸っています(した)か？(半角数字)<input type ="text" name="years_of_smoking"></p>
-         <p>これまでに性交渉の経験はありますか？</p>
-         <input type="radio" name="sex" value="1">はい
-         <input type="radio" name="sex" value="2">いいえ
-         <p>お酒は飲みますか？</p>
-         <input type="radio" name="alcohol" value="1">はい
-         <input type="radio" name="alcohol" value="2">いいえ
-         <p>身長を教えてください(cm)(半角数字)<input type ="text" name="height"></p>
-         <p>体重を教えてください(kg)(半角数字)<input type ="text" name="weight"></p>
-         <p><input type = "submit" value = "Start!"></p>
+         <p>年齢を入力してください(半角数字)<input type = "text" name="age" required pattern="[0-9]{1,3}"></p>
+         <span>性別を入力してください</span>
+         <input id="male" type="radio" name="gender" value="m" required />
+         <label for "male">男性</label>
+         <input id=“female type="radio" name="gender" value="f">
+         <label for =“female”>女性</label>
+         <p></p>
+         <span>(女性の場合)現在妊娠していますか？</span>
+         <input id="yes1" type="radio" name="pregnancy" value="1" required />
+         <label for "yes1">はい</label>
+         <input id="no1" type="radio" name="pregnancy" value="2">
+         <label for "no1">いいえ</label>
+         <input id="not-applicable" type="radio" name="pregnancy" value="2">
+         <label for "not-applicable">該当しない</label>
+         <p></p>
+         <span>タバコを吸っていますか？</span>
+         <input id="yes2" type="radio" name="smoking" value="1" required />
+         <label for "yes2">はい</label>
+         <input id="no2" type="radio" name="smoking" value="2">
+         <label for "no2">いいえ</label>
+         <input id="past" type="radio" name="smoking" value="3">
+         <label for "past">昔吸っていたけど今はやめた</label>
+         <p>1日何本吸っています(した)か？<span class="small">(半角数字、該当しない場合は0と入力してください)<span><input type ="text" name="number_of_smoking" required pattern="[0-9]{1,3}"></p>
+         <p>何年間吸っています(した)か？<span class="small">(半角数字、該当しない場合は0と入力してください)<span><input type ="text" name="years_of_smoking" required pattern="[0-9]{1,2}"></p>
+         <p></p>
+         <span>これまでに性交渉の経験はありますか？</span>
+         <input id="yes3" type="radio" name="sex" value="1" required />
+         <label for "yes3">はい</label>
+         <input id="no3" type="radio" name="sex" value="2">
+         <label for "no3">いいえ</label>
+         <p></p>
+         <span>お酒は飲みますか？</span>
+         <input id="yes4" type="radio" name="alcohol" value="1" required />
+         <label for "yes4">はい</label>
+         <input id="no4" type="radio" name="alcohol" value="2">
+         <label for "no4">いいえ</label>
+         <p>身長を教えてください(cm)(半角数字)<input type ="text" name="height" required pattern="[0-9]{1,3}"></p>
+         <p>体重を教えてください(kg)(半角数字)<input type ="text" name="weight" required pattern="[0-9]{1,3}"></p>
+         <p><input type = "submit" value = "Start!" class="button"></p>
       </form>
     </div>
     <div class="footer">
+      <p class="update">Last Updated on July 23th, 2020</p>
+      <p class="update">Created by Hideki Tsunoda</p>
+      <img src="/static/images/yugekeshiki.png" id="footer-image">
     </div>
   </body>
 </html>
