--- a/templates/result.html
+++ b/templates/result.html
@@ -2,18 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Result</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>Health maintainance</title>
+    <!-- <link rel="stylesheet" href="../static/style.css"> -->
+    <link rel="stylesheet" href="{{url_for('static',filename = 'style.css')}}">
   </head>
   <body>
-    <div class="main">
-      <p>本患者に推奨されるヘルスメンテナンスの項目は下記の通りです</p>
+    <div class="header">
+      <img src="/static/images/SCFM.png" class="aligncenter">
+      <p class="thema">Recommended Health Maintainance for Our Patients</p>
+    </div>
+    <div class="main-result">
+      <p class="thema2">本患者に推奨されるヘルスメンテナンスの項目は下記の通りです</p>
       <ul>
       {% for i in result %}
         <li>{{ i }}</li>
         <p></p>
       {% endfor %}
       </ul>
+    </div>
+    <div class="footer">
+      <p class="update">Last Updated on July 23th, 2020</p>
+      <p class="update">Created by Hideki Tsunoda</p>
+      <img src="/static/images/yugekeshiki.png" id="footer-image">
     </div>
   </body>
 </html>
