--- a/templates/result.html
+++ b/templates/result.html
@@ -2,28 +2,73 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- viewportを指定する。指定するだけでもスマホでそれなりの表示になる。 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Health maintainance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
-    <link rel="stylesheet" href="{{url_for('static',filename = 'style.css')}}">
+    {# Bootstrapの設定ファイルを一式読み込みする。 #}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    {# Bootstrapの設定ファイルを一式読み込みする。ここまで #}
+    <link rel="stylesheet" href="{{url_for('static',filename = 'index.css')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <div class="header">
-      <img src="/static/images/SCFM.png" class="aligncenter">
-      <p class="thema">Recommended Health Maintainance for Our Patients</p>
+      <div class="jumbotron jumbotron-header">
+        <h1>Recommended Health Maintainance</h1>
+        <h1>for Our Patients</h1>
+      </div>
     </div>
+
     <div class="main-result">
       <p class="thema2">本患者に推奨されるヘルスメンテナンスの項目は下記の通りです</p>
-      <ul>
+
+      <caption>定義リスト(dl)の例：</caption>
+      <dl>
       {% for i in result %}
-        <li>{{ i }}</li>
+        <dt>{{ i.split(':')[0] }}</dt>
+        <dd>{{ i.split(':')[1] }}</dd>
         <p></p>
       {% endfor %}
-      </ul>
+      </dl>
+      
     </div>
     <div class="footer">
-      <p class="update">Last Updated on July 23th, 2020</p>
-      <p class="update">Created by Hideki Tsunoda</p>
-      <img src="/static/images/yugekeshiki.png" id="footer-image">
+      <div class="container">
+      <div class="row">
+        <div class="col-md-4" >
+  		    <h3>About us</h3>
+  		    <p>
+  		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
+  		    </p>
+          <img src="/static/images/SCFM1.png" class="footer-logo img-fluid">
+        </div>
+        <div class="col-md-4">
+          <h3>Our Location </h3>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.7384303296!2d136.1174659508822!3d35.08826776977322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60017b43b7ad455f%3A0x301d1be235277d19!2z5byT5YmK44Oh44OH44Kj44Kr44Or44Kv44Oq44OL44OD44Kv77yI5Yy755mC5rOV5Lq656S-5Zuj77yJ5Zyo5a6F5Yy755mC6YOo!5e0!3m2!1sja!2sjp!4v1597480432814!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  		  </div>
+        <div class="col-md-4" >
+          <h3>Contact Us</h3>
+          <ul>
+  		        <li>Phone : +81 - 748 - 57 - 1141</li>
+  		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
+              <li>homepage : https://scfm.jp</li>
+  		    </ul>
+  		    <p>
+  		        This application was made by Shiga Family Medical Center and Hideki Tsunoda. If there are any problems, please contact us.
+  		    </p>
+  		    <ul class="sm">
+  		        <li><a href="https://www.facebook.com/scfm.jp/" ><img src="https://www.facebook.com/images/fb_icon_325x325.png" class="img-fluid"></a></li>
+  		        <li><a href="#" ><img src="http://playbookathlete.com/wp-content/uploads/2016/10/twitter-logo-4.png" class="img-fluid" ></a></li>
+  		    </ul>
+        </div>
+      </div>
+      </div>
     </div>
   </body>
 </html>
