--- a/templates/index.html
+++ b/templates/index.html
@@ -2,63 +2,189 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Health maintainance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
-    <link rel="stylesheet" href="{{url_for('static',filename = 'style.css')}}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static',filename = 'index.css')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="header">
-      <img src="/static/images/SCFM.png" class="aligncenter">
-      <p class="thema">Recommended Health Maintainance for Our Patients</p>
+      <div class="jumbotron jumbotron-header">
+        <h1>Recommended Health Maintainance</h1>
+        <h1>for Our Patients</h1>
+      </div>
     </div>
     <div class="main">
-      <p class="thema2">患者のプロファイルを入力してください。</p>
+      <p class="thema">Please enter patient information below</p>
+
       <form action="/result" method="POST">
-         <p>年齢を入力してください(半角数字)<input type = "text" name="age" required pattern="[0-9]{1,3}"></p>
-         <span>性別を入力してください</span>
-         <input id="male" type="radio" name="gender" value="m" required />
-         <label for "male">男性</label>
-         <input id=“female type="radio" name="gender" value="f">
-         <label for =“female”>女性</label>
-         <p></p>
-         <span>(女性の場合)現在妊娠していますか？</span>
-         <input id="yes1" type="radio" name="pregnancy" value="1" required />
-         <label for "yes1">はい</label>
-         <input id="no1" type="radio" name="pregnancy" value="2">
-         <label for "no1">いいえ</label>
-         <input id="not-applicable" type="radio" name="pregnancy" value="2">
-         <label for "not-applicable">該当しない</label>
-         <p></p>
-         <span>タバコを吸っていますか？</span>
-         <input id="yes2" type="radio" name="smoking" value="1" required />
-         <label for "yes2">はい</label>
-         <input id="no2" type="radio" name="smoking" value="2">
-         <label for "no2">いいえ</label>
-         <input id="past" type="radio" name="smoking" value="3">
-         <label for "past">昔吸っていたけど今はやめた</label>
-         <p>1日何本吸っています(した)か？<span class="small">(半角数字、該当しない場合は0と入力してください)<span><input type ="text" name="number_of_smoking" required pattern="[0-9]{1,3}"></p>
-         <p>何年間吸っています(した)か？<span class="small">(半角数字、該当しない場合は0と入力してください)<span><input type ="text" name="years_of_smoking" required pattern="[0-9]{1,2}"></p>
-         <p></p>
-         <span>これまでに性交渉の経験はありますか？</span>
-         <input id="yes3" type="radio" name="sex" value="1" required />
-         <label for "yes3">はい</label>
-         <input id="no3" type="radio" name="sex" value="2">
-         <label for "no3">いいえ</label>
-         <p></p>
-         <span>お酒は飲みますか？</span>
-         <input id="yes4" type="radio" name="alcohol" value="1" required />
-         <label for "yes4">はい</label>
-         <input id="no4" type="radio" name="alcohol" value="2">
-         <label for "no4">いいえ</label>
-         <p>身長を教えてください(cm)(半角数字)<input type ="text" name="height" required pattern="[0-9]{1,3}"></p>
-         <p>体重を教えてください(kg)(半角数字)<input type ="text" name="weight" required pattern="[0-9]{1,3}"></p>
-         <p><input type = "submit" value = "Start!" class="button"></p>
+        <div class="form-row">
+          <div class="form-group col-sm-12">
+            <label for="age" class="item">Age(years)</label>
+            <input type="text" class="form-control" name="age" required pattern="[0-9]{1,3}" placeholder=”Half-widths characters”>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-sm-6">
+            <label for="height" class="item">Height(cm)</label>
+            <input type="text" class="form-control" name="height" required pattern="[0-9]{1,3}" placeholder=”Please use half-width English numbers”>
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="age" class="item">Weight(kg)</label>
+            <input type="text" class="form-control" name="weight" required pattern="[0-9]{1,3}" placeholder=”Please use half-width English numbers”>
+          </div>
+         </div>
+
+         <div class="container-fluid item">
+           Gender
+         </div>
+         <div class="form-row">
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="male" type="radio" name="gender" value="m" required />
+               <label for="male" class="form-check-label radio">Male</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="female" type="radio" name="gender" value="f" required />
+               <label for="female" class="form-check-label radio">Female</label>
+             </div>
+           </div>
+         </div>
+
+         <div class="container-fluid item">
+           (If female)Pregnancy status
+         </div>
+         <div class="form-row">
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="yes1" type="radio" name="pregnancy" value="1" required />
+               <label for="yes1" class="form-check-label radio">Yes</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="no1" type="radio" name="pregnancy" value="2">
+               <label for="no1" class="form-check-label radio">No</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="not-applicable" type="radio" name="pregnancy" value="2">
+               <label for="not-applicable" class="form-check-label radio">Not applicable</label>
+             </div>
+           </div>
+         </div>
+
+         <div class="container-fluid item">
+           Smoking status
+         </div>
+         <div class="form-row">
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="yes2" type="radio" name="smoking" value="1" required />
+               <label for="yes2" class="form-check-label radio">Current</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="no2" type="radio" name="smoking" value="2">
+               <label for="no2" class="form-check-label radio">Never</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-4">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="past" type="radio" name="smoking" value="3">
+               <label for="past" class="form-check-label radio">Past</label>
+             </div>
+           </div>
+         </div>
+
+         <div class="form-row">
+           <div class="form-group col-sm-6">
+             <label for="howmany" class="item">How many cigarettes per day?</label>
+             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder=”半角数字、該当しない場合は0と入力してください”></p>
+           </div>
+           <div class="form-group col-sm-6">
+             <label for="howlong" class="item">How long?(years)</label>
+             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder=”半角数字、該当しない場合は0と入力してください”></p>
+           </div>
+         </div>
+
+         <div class="container-fluid item">
+           Experience of Sexual Activity
+         </div>
+         <div class="form-row">
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="yes3" type="radio" name="sex" value="1" required />
+               <label for="yes3" class="form-check-label radio">Yes</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="no3" type="radio" name="sex" value="2">
+               <label for="no3" class="form-check-label radio">No</label>
+             </div>
+           </div>
+         </div>
+
+         <div class="container-fluid item">
+           alcohol status
+         </div>
+         <div class="form-row">
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="yes4" type="radio" name="alcohol" value="1" required />
+               <label for="yes4" class="form-check-label radio">Yes</label>
+             </div>
+           </div>
+           <div class="form-group col-sm-6">
+             <div class="form-check">
+               <input class="form-check-input button-item" id="no4" type="radio" name="alcohol" value="2">
+               <label for="no4" class="form-check-label radio">No</label>
+             </div>
+           </div>
+         </div>
+
+         <p><input type = "submit" value = "Get Recommendation" class="button-submit"></p>
+
       </form>
     </div>
     <div class="footer">
-      <p class="update">Last Updated on July 23th, 2020</p>
-      <p class="update">Created by Hideki Tsunoda</p>
-      <img src="/static/images/yugekeshiki.png" id="footer-image">
+      <div class="container">
+      <div class="row">
+        <div class="col-md-4" >
+  		    <h3>About us</h3>
+  		    <p>
+  		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
+  		    </p>
+          <img src="/static/images/SCFM1.png" class="footer-logo img-fluid">
+        </div>
+        <div class="col-md-4">
+          <h3>Our Location </h3>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.7384303296!2d136.1174659508822!3d35.08826776977322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60017b43b7ad455f%3A0x301d1be235277d19!2z5byT5YmK44Oh44OH44Kj44Kr44Or44Kv44Oq44OL44OD44Kv77yI5Yy755mC5rOV5Lq656S-5Zuj77yJ5Zyo5a6F5Yy755mC6YOo!5e0!3m2!1sja!2sjp!4v1597480432814!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  		  </div>
+        <div class="col-md-4" >
+          <h3>Contact Us</h3>
+          <ul>
+  		        <li>Phone : +81 - 748 - 57 - 1141</li>
+  		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
+              <li>homepage : https://scfm.jp</li>
+  		    </ul>
+  		    <p>
+  		        This application was made by Shiga Family Medical Center and Hideki Tsunoda. If there are any problems, please contact us.
+  		    </p>
+  		    <ul class="sm">
+  		        <li><a href="https://www.facebook.com/scfm.jp/" ><img src="https://www.facebook.com/images/fb_icon_325x325.png" class="img-fluid"></a></li>
+  		        <li><a href="#" ><img src="http://playbookathlete.com/wp-content/uploads/2016/10/twitter-logo-4.png" class="img-fluid" ></a></li>
+  		    </ul>
+        </div>
+      </div>
+      </div>
     </div>
   </body>
 </html>
