--- a/templates/index.html
+++ b/templates/index.html
@@ -23,17 +23,17 @@
         <div class="form-row">
           <div class="form-group col-sm-12">
             <label for="age" class="item">Age(years)</label>
-            <input type="text" class="form-control" name="age" required pattern="[0-9]{1,3}" placeholder=”Half-widths characters”>
+            <input type="text" class="form-control" name="age" required pattern="[0-9]{1,3}" placeholder="Please use half-widths English numbers">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label for="height" class="item">Height(cm)</label>
-            <input type="text" class="form-control" name="height" required pattern="[0-9]{1,3}" placeholder=”Please use half-width English numbers”>
+            <input type="text" class="form-control" name="height" required pattern="[0-9]{1,3}" placeholder="Please use half-widths numbers">
           </div>
           <div class="form-group col-sm-6">
             <label for="age" class="item">Weight(kg)</label>
-            <input type="text" class="form-control" name="weight" required pattern="[0-9]{1,3}" placeholder=”Please use half-width English numbers”>
+            <input type="text" class="form-control" name="weight" required pattern="[0-9]{1,3}" placeholder="Please use half-widths numbers">
           </div>
          </div>
 
@@ -106,11 +106,11 @@
          <div class="form-row">
            <div class="form-group col-sm-6">
              <label for="howmany" class="item">How many cigarettes per day?</label>
-             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder=”半角数字、該当しない場合は0と入力してください”></p>
+             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder="if not applicable put 0"></p>
            </div>
            <div class="form-group col-sm-6">
              <label for="howlong" class="item">How long?(years)</label>
-             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder=”半角数字、該当しない場合は0と入力してください”></p>
+             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder="if not applicable put 0"></p>
            </div>
          </div>
 
