--- a/templates/toppage.html
+++ b/templates/toppage.html
@@ -26,7 +26,7 @@
             </div>
           </div>
           <div class="button">
-            <button type="button" class="btn btn-outline-light btn-lg">Get Started!</button>
+            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='index'">Get Started!</button>
           </div>
     </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
