--- a/templates/index.html
+++ b/templates/index.html
@@ -37,66 +37,66 @@
           </div>
          </div>
 
-         <div class="container-fluid item">
-           Gender
-         </div>
-         <div class="form-row">
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+         <div class="form-row form-group">
+           <div class="col-12 item">
+             Gender
+           </div>
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="male" type="radio" name="gender" value="m" required />
                <label for="male" class="form-check-label radio">Male</label>
              </div>
            </div>
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="female" type="radio" name="gender" value="f" required />
                <label for="female" class="form-check-label radio">Female</label>
              </div>
            </div>
          </div>
 
-         <div class="container-fluid item">
-           (If female)Pregnancy status
-         </div>
-         <div class="form-row">
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+         <div class="form-row form-group">
+           <div class="col-12 item">
+             (If female)Pregnancy status
+           </div>
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="yes1" type="radio" name="pregnancy" value="1" required />
                <label for="yes1" class="form-check-label radio">Yes</label>
              </div>
            </div>
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="no1" type="radio" name="pregnancy" value="2">
                <label for="no1" class="form-check-label radio">No</label>
              </div>
            </div>
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="not-applicable" type="radio" name="pregnancy" value="2">
                <label for="not-applicable" class="form-check-label radio">Not applicable</label>
              </div>
            </div>
          </div>
 
-         <div class="container-fluid item">
-           Smoking status
-         </div>
-         <div class="form-row">
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+         <div class="form-row form-group">
+           <div class="col-12 item">
+             Smoking status
+           </div>
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="yes2" type="radio" name="smoking" value="1" required />
                <label for="yes2" class="form-check-label radio">Current</label>
              </div>
            </div>
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="no2" type="radio" name="smoking" value="2">
                <label for="no2" class="form-check-label radio">Never</label>
              </div>
            </div>
-           <div class="form-group col-sm-4">
-             <div class="form-check">
+           <div class="col-sm-4">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="past" type="radio" name="smoking" value="3">
                <label for="past" class="form-check-label radio">Past</label>
              </div>
@@ -114,43 +114,47 @@
            </div>
          </div>
 
-         <div class="container-fluid item">
-           Experience of Sexual Activity
-         </div>
-         <div class="form-row">
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+         <div class="form-row form-group">
+           <div class="col-12 item">
+             Experience of Sexual Activity
+           </div>
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="yes3" type="radio" name="sex" value="1" required />
                <label for="yes3" class="form-check-label radio">Yes</label>
              </div>
            </div>
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="no3" type="radio" name="sex" value="2">
                <label for="no3" class="form-check-label radio">No</label>
              </div>
            </div>
          </div>
 
-         <div class="container-fluid item">
-           alcohol status
-         </div>
-         <div class="form-row">
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+         <div class="form-row form-group">
+           <div class="col-12 item">
+             alcohol status
+           </div>
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="yes4" type="radio" name="alcohol" value="1" required />
                <label for="yes4" class="form-check-label radio">Yes</label>
              </div>
            </div>
-           <div class="form-group col-sm-6">
-             <div class="form-check">
+           <div class="col-sm-6">
+             <div class="form-check pl-0">
                <input class="form-check-input button-item" id="no4" type="radio" name="alcohol" value="2">
                <label for="no4" class="form-check-label radio">No</label>
              </div>
            </div>
          </div>
 
-         <p><input type = "submit" value = "Get Recommendation" class="button-submit"></p>
+         <div class="row">
+           <div class="col-12">
+             <input type = "submit" value = "Get Recommendation" class="button-submit"></p>
+           </div>
+         </div>
 
       </form>
     </div>
