--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
          <div class="form-row form-group">
            <div class="col-12 item">
-             (If female)Pregnancy status
+             (If female)Trying to be Pregnant?
            </div>
            <div class="col-sm-4">
              <div class="form-check pl-0">
