--- a/templates/result.html
+++ b/templates/result.html
@@ -43,12 +43,12 @@
         <div class="row">
         <div class="col-12">
             <p style="text-align: center;">
-              <button class="btn btn-primary" id="note" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              <button class="btn btn-primary" id="note" type="button" data-toggle="collapse" data-target="#collapseExample-{{loop.index0}}" aria-expanded="false" aria-controls="collapseExample">
                 Notes
               </button>
             </p>
-            <div class="collapse" id="collapseExample">
-              <div class="card card-body">
+            <div class="collapse" id="collapseExample-{{loop.index0}}">
+              <div class="card card-body font-small">
                 {{ i.split('fff')[2] }}
               </div>
             </div>
