--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
   		    <p>
   		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
   		    </p>
-          <img src="/static/images/SCFM1.png" class="footer-logo img-fluid">
+          <a href="https://scfm.jp"><img src="/static/images/SCFM1.png" class="footer-logo img-fluid"></a>
         </div>
         <div class="col-md-4">
           <h3>Our Location </h3>
