--- a/templates/result.html
+++ b/templates/result.html
@@ -33,6 +33,7 @@
             <li>推奨度として”推奨する”、”検討する”を使い分けています。</li>
             <li>Statementにある助成の費用は竜王町在住の場合のものです</li>
             <li>検診としての検査項目が医療保険での診療としてどの程度許容されるかは、その地域によって異なります。</li>
+            <li>以下SCFM(Shiga Center of Family Medicine)、YMC(Yuge Medical Clinic)の略語を用います。</li>
         </div>
       </div>
 
@@ -87,7 +88,7 @@
   		    <p>
   		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
   		    </p>
-          <img src="/static/images/SCFM1.png" class="footer-logo img-fluid">
+          <a href="https://scfm.jp"><img src="/static/images/SCFM1.png" class="footer-logo img-fluid"></a>
         </div>
         <div class="col-md-4">
           <h3>Our Location </h3>
