--- a/static/index.css
+++ b/static/index.css
@@ -67,7 +67,7 @@ span{
   color         : #ffffff;
   transition    : .3s;
   font-family: 'Montserrat', sans-serif;
-  margin-top:30px;
+  margin:25px 0px;
   border: none;
 }
 
