--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
            </div>
            <div class="col-sm-4">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="not-applicable" type="radio" name="pregnancy" value="2">
+               <input class="form-check-input button-item" id="not-applicable" type="radio" name="pregnancy" value="2" checked="checked">
                <label for="not-applicable" class="form-check-label radio">Not applicable</label>
              </div>
            </div>
@@ -106,11 +106,11 @@
          <div class="form-row">
            <div class="form-group col-sm-6">
              <label for="howmany" class="item">How many cigarettes per day?</label>
-             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder="if not applicable put 0"></p>
+             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder="if not applicable put 0" value="0"></p>
            </div>
            <div class="form-group col-sm-6">
              <label for="howlong" class="item">How long?(years)</label>
-             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder="if not applicable put 0"></p>
+             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder="if not applicable put 0" value="0"></p>
            </div>
          </div>
 
@@ -164,7 +164,7 @@
         <div class="col-md-4" >
   		    <h3>About us</h3>
   		    <p>
-  		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
+  		        Yuge Medical Clinic is a clinic which is located in the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
   		    </p>
           <a href="https://scfm.jp"><img src="/static/images/SCFM1.png" class="footer-logo img-fluid"></a>
         </div>
@@ -177,10 +177,10 @@
           <ul>
   		        <li>Phone : +81 - 748 - 57 - 1141</li>
   		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
-              <li>homepage : https://scfm.jp</li>
+              <li><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
   		    </ul>
   		    <p>
-  		        This application was made by Shiga Family Medical Center and Hideki Tsunoda. If there are any problems, please contact us.
+  		        This application was made by Shiga Center for Family Medicine and Hideki Tsunoda. If there are any problems, please contact us.
   		    </p>
   		    <ul class="sm">
   		        <li><a href="https://www.facebook.com/scfm.jp/" ><img src="https://www.facebook.com/images/fb_icon_325x325.png" class="img-fluid"></a></li>
