--- a/templates/result.html
+++ b/templates/result.html
@@ -30,10 +30,10 @@
       <div class="row">
         <div class="col-sm-12 caution">
           <p>※以下の点にご注意ください。</p>
+            <li>以下SCFM(Shiga Center for Family Medicine)、YMC(Yuge Medical Clinic)の略語を用います。</li>
             <li>推奨度として”推奨する”、”検討する”を使い分けています。</li>
-            <li>Statementにある助成の費用は竜王町在住の場合のものです</li>
+            <li>Statementにある助成の費用はSCFM本部YMCの立地する滋賀県竜王町在住の場合のものです。</li>
             <li>検診としての検査項目が医療保険での診療としてどの程度許容されるかは、その地域によって異なります。</li>
-            <li>以下SCFM(Shiga Center of Family Medicine)、YMC(Yuge Medical Clinic)の略語を用います。</li>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
         </p>
         <div class="collapse" id="collapseExample">
           <div class="card card-body">
-            このアプリケーションは、患者にヘルスメンテナンスを提供する医療従事者のため、滋賀家庭医療学センター(SCFM)によって作られたものです。記載されている statementsとrecommendationsについては、SCFM内で十分な議論を経て作られたものですが、本アプリケーションの内容を患者に適用される際はくれぐれもご自身で内容をご確認いただいた上で、個々の患者や地域の状況に応じて利用をお願いします。私たちは、本アプリケーションの使用によって生じたいかなる身体的・経済的損害についても責任をとりません。
+            このアプリケーションは、患者にヘルスメンテナンスを提供する医療従事者のため、滋賀家庭医療学センター(Shiga Center for Family Medicine: SCFM)によって作られたものです。記載されている statementsとrecommendationsについては、SCFM内で十分な議論を経て作られたものですが、情報・コンテンツの誤りや第三者による改ざん等の危険性を完全に排除できるものではなく、利用上の安全性および掲載情報の信頼性について、一切保証するものではありません。本アプリケーションの内容を患者に適用される際はくれぐれもご自身で内容をご確認いただいた上で、個々の患者や地域の状況に応じて利用をお願いします。当センターは、本アプリケーションの使用によって生じたいかなる損害についても責任を負いません。本アプリケーションの内容には、当センター以外の第三者が提示したコンテンツ、リンクなどの情報が含まれる場合がありますが、これらの利用により生じた一切の損害についても、当センターが責任を負うものではありません。
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
         <div class="col-md-4" >
   		    <h3>About us</h3>
   		    <p>
-  		        Yuge Medical Clinic is a clinic which is located the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
+  		        Yuge Medical Clinic is a clinic which is located in the middle of Shiga prefecture. We have focused on high quality primary care and homemedical care, and we also have been engaged in education of family medicine in Shiga Prefecture.
   		    </p>
           <a href="https://scfm.jp"><img src="/static/images/SCFM1.png" class="footer-logo img-fluid"></a>
         </div>
@@ -99,10 +99,10 @@
           <ul>
   		        <li>Phone : +81 - 748 - 57 - 1141</li>
   		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
-              <li>homepage : https://scfm.jp</li>
+              <li><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
   		    </ul>
   		    <p>
-  		        This application was made by Shiga Family Medical Center and Hideki Tsunoda. If there are any problems, please contact us.
+  		        This application was made by Shiga Center for Family Medicine and Hideki Tsunoda. If there are any problems, please contact us.
   		    </p>
   		    <ul class="sm">
   		        <li><a href="https://www.facebook.com/scfm.jp/" ><img src="https://www.facebook.com/images/fb_icon_325x325.png" class="img-fluid"></a></li>
