--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="header">
-      <div class="jumbotron jumbotron-header">
+      <div class="jumbotron jumbotron-fluid jumbotron-header">
         <h1>Recommended Health Maintainance</h1>
         <h1>for Our Patients</h1>
       </div>
@@ -32,7 +32,7 @@
           <p>※以下の点にご注意ください。</p>
             <li>以下SCFM(Shiga Center for Family Medicine)、YMC(Yuge Medical Clinic)の略語を用います。</li>
             <li>推奨度として”推奨する”、”検討する”を使い分けています。</li>
-            <li>Statementにある助成の費用はSCFM本部YMCの立地する滋賀県竜王町在住の場合のものです。</li>
+            <li>Statementにある助成の費用はSCFM本部YMCの立地する滋賀県竜王町在住の場合のものです。また、実際には記載してある検査費用に加えて診察料などの料金が上乗せされます</li>
             <li>検診としての検査項目が医療保険での診療としてどの程度許容されるかは、その地域によって異なります。</li>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <ul>
   		        <li>Phone : +81 - 748 - 57 - 1141</li>
   		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
-              <li><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
+              <li id="hplink"><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
   		    </ul>
   		    <p>
   		        This application was made by Shiga Center for Family Medicine and Hideki Tsunoda. If there are any problems, please contact us.
@@ -112,5 +112,8 @@
       </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
