--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="jumbotron jumbotron-header">
+      <div class="jumbotron jumbotron-fluid jumbotron-header">
         <h1>Recommended Health Maintainance</h1>
         <h1>for Our Patients</h1>
       </div>
@@ -43,38 +43,36 @@
            </div>
            <div class="col-sm-6">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="male" type="radio" name="gender" value="m" required />
+               <input class="form-check-input button-item" id="male" type="radio" name="gender" value="m" required
+               data-toggle="collapse" data-target="#collapse-pregnancy.show" aria-expanded="false" aria-controls="collapse-pregnancy" required
+               />
                <label for="male" class="form-check-label radio">Male</label>
              </div>
            </div>
            <div class="col-sm-6">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="female" type="radio" name="gender" value="f" required />
+               <input class="form-check-input button-item" id="female" type="radio" name="gender" value="f"
+               data-toggle="collapse" data-target="#collapse-pregnancy:not(.show)" aria-expanded="true" aria-controls="collapse-pregnancy" required
+               />
                <label for="female" class="form-check-label radio">Female</label>
              </div>
            </div>
          </div>
 
-         <div class="form-row form-group">
+         <div class="form-row form-group collapse collapse-pregnancy" id="collapse-pregnancy">
            <div class="col-12 item">
              (If female)Trying to be Pregnant?
            </div>
-           <div class="col-sm-4">
+           <div class="col-sm-6">
              <div class="form-check pl-0">
                <input class="form-check-input button-item" id="yes1" type="radio" name="pregnancy" value="1" required />
                <label for="yes1" class="form-check-label radio">Yes</label>
              </div>
            </div>
-           <div class="col-sm-4">
+           <div class="col-sm-6">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="no1" type="radio" name="pregnancy" value="2">
+               <input class="form-check-input button-item" id="no1" type="radio" name="pregnancy" value="2" checked="checked">
                <label for="no1" class="form-check-label radio">No</label>
-             </div>
-           </div>
-           <div class="col-sm-4">
-             <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="not-applicable" type="radio" name="pregnancy" value="2" checked="checked">
-               <label for="not-applicable" class="form-check-label radio">Not applicable</label>
              </div>
            </div>
          </div>
@@ -85,34 +83,48 @@
            </div>
            <div class="col-sm-4">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="yes2" type="radio" name="smoking" value="1" required />
+               {# inputタグに細工をする。
+                data-toggle="collapse" を指定。
+                data-target="#collapse-smoking:not(.show)" を指定。開閉したい要素のIDを指定する。押すとcollapseが開くように設定するには、この指定。
+                押すとcollapseが閉じるようにする設定は、"#collapse-smoking.show"
+                aria-expanded="true" 押すとcollapseが開くように設定するには"true"、そうでない場合は"false"
+                aria-controls="collapse-smoking" 開閉したい要素のクラス名を指定する。
+               #}
+               <input class="form-check-input button-item" id="yes2" type="radio" name="smoking" value="1" required
+                data-toggle="collapse" data-target="#collapse-smoking:not(.show)" aria-expanded="true" aria-controls="collapse-smoking"
+               />
                <label for="yes2" class="form-check-label radio">Current</label>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="no2" type="radio" name="smoking" value="2">
+               <input class="form-check-input button-item" id="no2" type="radio" name="smoking" value="2"
+                 data-toggle="collapse" data-target="#collapse-smoking.show" aria-expanded="false" aria-controls="collapse-smoking"
+               >
                <label for="no2" class="form-check-label radio">Never</label>
              </div>
            </div>
            <div class="col-sm-4">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="past" type="radio" name="smoking" value="3">
+               <input class="form-check-input button-item" id="past" type="radio" name="smoking" value="3"
+                 data-toggle="collapse" data-target="#collapse-smoking:not(.show)" aria-expanded="true" aria-controls="collapse-smoking"
+                 >
                <label for="past" class="form-check-label radio">Past</label>
              </div>
            </div>
          </div>
 
-         <div class="form-row">
-           <div class="form-group col-sm-6">
-             <label for="howmany" class="item">How many cigarettes per day?</label>
-             <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder="if not applicable put 0" value="0"></p>
-           </div>
-           <div class="form-group col-sm-6">
-             <label for="howlong" class="item">How long?(years)</label>
-             <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder="if not applicable put 0" value="0"></p>
-           </div>
-         </div>
+         {# 開閉したい要素のクラスに、"collapse"を追加し、idを設定する。クラスにもidと同名のクラスを設定しておく。 #}
+        <div class="form-row collapse collapse-smoking" id="collapse-smoking">
+          <div class="form-group col-sm-6">
+            <label for="howmany" class="item">How many cigarettes per day?</label>
+            <input type ="text" class="form-control" name="number_of_smoking" required pattern="[0-9]{1,3}" placeholder="if not applicable put 0" value="0"></p>
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="howlong" class="item">How long?(years)</label>
+            <input type ="text" class="form-control" name="years_of_smoking" required pattern="[0-9]{1,2}" placeholder="if not applicable put 0" value="0"></p>
+          </div>
+        </div>
 
          <div class="form-row form-group">
            <div class="col-12 item">
@@ -177,7 +189,7 @@
           <ul>
   		        <li>Phone : +81 - 748 - 57 - 1141</li>
   		        <li>E-mail : scfm-tsunoda@yugemed-scfm.com</li>
-              <li><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
+              <li id="hplink"><a href="https://scfm.jp">homepage : https://scfm.jp</a></li>
   		    </ul>
   		    <p>
   		        This application was made by Shiga Center for Family Medicine and Hideki Tsunoda. If there are any problems, please contact us.
@@ -190,5 +202,8 @@
       </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
