--- a/templates/toppage.html
+++ b/templates/toppage.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div class="jumbotron explanation">
+    <div class="jumbotron jumbotron-fluid explanation">
           <div class="container">
             <h1 class="thema">Recommendation of Evidence Based Healthmaitainance in Japan</h1>
             <div class="statement">
